[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/fonts/72_DotMatrix_size55.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/piece_power_list_row.gd" type="Script" id=2]

[node name="PiecePowerListRow" type="HBoxContainer"]
margin_right = 748.5
margin_bottom = 62.0
rect_min_size = Vector2( 748.5, 62 )
mouse_filter = 2
custom_constants/separation = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerCount" type="Label" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 82.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
text = "12"

[node name="PowerName" type="Label" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 102.0
margin_right = 499.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )
text = "Raise Tile"

[node name="HelpSign" type="Label" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 519.0
margin_right = 748.0
margin_bottom = 62.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "?"
align = 2
